--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<mybatis-generator.version>1.3.2</mybatis-generator.version>
+		<baidu.api.version>4.2.0</baidu.api.version>
 	</properties>
 
 	<dependencies>
@@ -91,6 +92,12 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.2.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.baidu.aip</groupId>
+			<artifactId>java-sdk</artifactId>
+			<version>${baidu.api.version}</version>
 		</dependency>
 	</dependencies>
 
