--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,19 +4,44 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/vns?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://mysql.java.vm.com:3306/vns?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password:
-
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.xhx.vns.backend.dao
+    password: QAZwsx123.
+    hikari:
+      minimum-idle: 5
+      connection-test-query: SELECT 1
+      maximum-pool-size: 20
+      auto-commit: true
+      idle-timeout: 30000
+      pool-name: SpringBootHikariCP
+      max-lifetime: 60000
+      connection-timeout: 30000
+mybatis-plus:
+  mapper-locations: classpath:mappers/*.xml
+  global-config:
+    # 数据库相关配置
+    db-config:
+      #主键类型  AUTO:"数据库ID自增", INPUT:"用户输入ID",ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
+      id-type: auto
+      #字段策略 IGNORED:"忽略判断",NOT_NULL:"非 NULL 判断"),NOT_EMPTY:"非空判断"
+      field-strategy: not_empty
+      #驼峰下划线转换
+      table-underline: true
+      #是否开启大写命名，默认不开启
+      #capital-mode: true
+      #逻辑删除配置
+      #logic-delete-value: 1
+      #logic-not-delete-value: 0
+      db-type: mysql
+    #刷新mapper 调试神器
+    refresh: true
+    # 原生配置
+    configuration:
+      map-underscore-to-camel-case: true
+      cache-enabled: true
 
 # 显示sql
 logging:
   level:
-    com:
-      xhx:
-        vns:
-          backend:
-            dao:  debug
+    com.xhx.vns: debug
+    com.xhx.vns.backend.mapper: trace
